2005-09-10  Shiro Kawai  <shiro@acm.org>

	* dbd_mysqllib.scm: use foreign pointer attribute to keep track of
	  whether a handle is already closed/freed or not.
	  This adds mysql-handle-closed? and mysql-res-closed? APIs.
	* dbd_mysql.c: use the above information to prevent finalizers
	  from freeing mysql structure more than once.
	* dbd/mysql.scm: drop dependency to <dbi-object> and <dbi-result-set>.
	  Define dbi-open? method to query the low-level handle about
	  open/close status.  Fixed some bugs.

2005-09-07  Shiro Kawai  <shiro@acm.org>

	* dbd/mysql.scm: adapted to the dbi api change.

2005-09-04  Shiro Kawai  <shiro@acm.org>

	* dbd/mysql.scm: slightly modified to follow the change in
	  util.relation.  Dropped relation-column-getter and implemented
	  relation-accessor, for the latter became the fundamental operation.
	  Dropped relation-column-setter, for it's better to keep the
	  result set read-only.
	
2005-08-29  Shiro Kawai  <shiro@acm.org>

	* dbd_mysqllib.stub (mysql-real-escape-string): added.
	* dbd/mysql.scm (dbi-escape-sql): ditto.

	* adapted to the API change in Gauche 0.8.6_pre2.

2005-08-16  Shiro Kawai  <shiro@acm.org>

	* adapted to the relations framework.

2005-08-08  Shiro Kawai  <shiro@acm.org>

	* rewrote almost everything.  requires CVS HEAD of Gauche to build.
	  - using the new (0.8.6) Gauche's extension API to make
	    the code cleaner.
	  - adapted to the new DBI API.
	  - handling MYSQL handle properly.
	  - handling mysql error as <mysql-error> extension.
	  - fixed collection framework to allow multiple application of
	    call-with-iterators.

2005-07-16  Shiro Kawai  <shiro@acm.org>

	* adapted dbd-mysql to the new extension building scheme
