@@ -1,3 +1,8 @@
+2005-11-03  Shiro Kawai  <shiro@acm.org>
+
+	* dbd/mysql.scm (<mysql-result-set>, referencer, relation-rows):
+	  adapted to the change of the relation framework protocol.
+
 2005-09-10  Shiro Kawai  <shiro@acm.org>
 
 	* dbd_mysqllib.scm: use foreign pointer attribute to keep track of
